--- a/test/test_ch7_1/ch7-1-2.in
+++ b/test/test_ch7_1/ch7-1-2.in
@@ -1,11 +1,27 @@
 1
 1
-17
+2
+4
+7
+W w2 4 44.4 true :Dobong-gu Kwangju: Hyundai Manager
+3
+4
+0
 5
-17
-13
-13
+6
+5
+    K p3 11 83.3 true :100 Dunsan-ro Seo-gu Daejeon:
+    P p3 11 83.3 true :100 Dunsan-ro Seo-gu Daejeon:
+    S s3 12 71.5 false :Gwangju Nam-gu Bongseon-dong 21: Computer 3.3 2
+    W w3 13 65 true :Jong-ro 1-gil, Jongno-gu, Seoul: Kia CEO
+    S s4 15 80 true :1001, Jungang-daero, Yeonje-gu, Busan: Biology 3.8 3
+    W w4 16 77 false :Buk-ro 3, Kangdong-gu, Seoul: Naver Department-Head
+7
+15
+W w5 16 77.0 false :Buk-ro 3, Kangdong-gu, Seoul: Naver Department-Head
+7
 17
 0
+W w6 16 77.0 false :Buk-ro 3, Kangdong-gu, Seoul: Naver Department-Head
 0
-
+0
